Added base layout and members

--- a/index.html
+++ b/index.html
@@ -1,1 +1,151 @@
-<h1>Kobi!</h1>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Kobi</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+		<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
+		<!-- Header -->
+		<section id="header">
+			<header>
+				<span class="image avatar"><img src="images/kodi_logo.png" alt="" /></span>
+				<h1 id="logo"><a href="#">CISC 322/326 Group <i>Kobi</i> (24)</a></h1>
+			</header>
+			<nav id="nav">
+				<ul>
+					<li><a href="#ZERO" class="active">About Us</a></li>
+					<li><a href="#ONE">Reports</a></li>
+					<li><a href="#TWO">Slides and Presentations</a></li>
+					<li><a href="#THREE">Other documentations</a></li>
+				</ul>
+			</nav>
+			<footer>
+				<ul class="icons">
+					<li>
+						<a href="mailto:20en3@queensu.ca" class="icon solid fa-envelope">
+							<span class="label">Email</span></a>
+					</li>
+				</ul>
+			</footer>
+		</section>
+
+		<!-- Wrapper -->
+		<div id="wrapper">
+			<!-- Main -->
+			<div id="main">
+
+				<!-- 0 -->
+				<section id="ZERO">
+					<div class="container">
+						<header class="major">
+							<h2>About Us</h2>
+							<p>We are Kobi</p>
+							<p>We are <i>Kobi</i>, group 24 for Fall 2023 CISC 322/326. We will be reviewing the software architecture for the multimedia player, Kodi.<br>
+								Our group consists of:<br>
+								<ul>
+									<li> Edward Ng </li>
+									<li> Arjun Devnani </li>
+									<li> Raif Karkal </li>
+									<li> Abdul Moez Akbar </li>
+									<li> Danyaal Sahi </li>
+									<li> Drake Li </li>
+								</ul>
+								We will post our presentations, slides, reports and other documents here.
+							</p>
+						</header>
+					</div>
+				</section>
+
+				<!-- 1 -->
+				<section id="ONE">
+					<div class="container">
+						<header class="major">
+							<h2>Reports</h2>
+							<p>Our report begins here:</p>
+							<ul>
+								<a href="https://github.com/edng5/edng5.github.io/blob/main/Documentation/Reports/A1/A1_Report.pdf">
+									Report 1: Conceptual Architecture of Kodi
+								</a>
+							</ul>
+							<ul>
+								<a href="">
+									Report 2: Concrete Architecture of Kodi
+								</a>
+							</ul>
+							<ul>
+								<a href="">
+									Report 3: Enhancement Proposal
+								</a>
+							</ul>
+						</header>
+					</div>
+				</section>
+
+				<!-- 2 -->
+				<section id="TWO">
+					<div class="container">
+						<header class="major">
+							<h2>Slides and Presentations</h2>
+							<p>Our presentation goes here</p>
+								<ul>
+									<a href="">
+										Presentation 1: Conceptual Architecture of Kodi (YouTube)
+									</a>
+								</ul>
+								<ul>
+									<a href="">
+										Presentation 2: Concrete Architecture of Kodi (YouTube)
+									</a>
+								</ul>
+							<ul>
+								<a href="">
+									Presentation 3: Enhancement Proposal for Kodi (YouTube)
+								</a>
+							</ul>
+						</header>
+						</header>
+					</div>
+				</section>
+
+				<!-- 3 -->
+				<section id="THREE">
+					<div class="container">
+						<header class="major">
+							<h2>Other documentations</h2>
+							<p>Other documentations will be here:</p>
+							<p>
+								<i>There's currently nothing here, don't worry, there will be an update here soon.</i>
+							</p>
+						</header>
+					</div>
+				</section>
+
+				<!-- 4 -->
+				<section id="FOUR">
+					<div class="container">
+						<header class="major">
+							<h2>Problems?</h2>
+							<p>Don't worry!</p>
+							<p>
+								<i>If there is anything wrong, please contact us use the email button at the bottom right of the page!</i>
+							</p>
+						</header>
+					</div>
+				</section>
+				</div>
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+	</body>
+</html>
