Added A1 report and presentation

--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
 					<div class="container">
 						<header class="major">
 							<h2>Reports</h2>
-							<p>Our report begins here:</p>
 							<ul>
-								<a href="https://github.com/edng5/edng5.github.io/blob/main/reports/Kobi%20-%20Assignment%201_%20Conceptual%20Architecture.pdf">
+								<a href="https://github.com/edng5/edng5.github.io/blob/main/report/Kobi%20-%20Assignment%201_%20Conceptual%20Architecture.pdf">
 									Report 1: Conceptual Architecture of Kodi
 								</a>
 							</ul>
@@ -88,10 +87,9 @@
 				<section id="TWO">
 					<div class="container">
 						<header class="major">
-							<h2>Slides and Presentations</h2>
-							<p>Our presentation goes here</p>
+							<h2>Presentations</h2>
 								<ul>
-									<a href="">
+									<a href="https://www.youtube.com/watch?v=vV_BgtYlJSM">
 										Presentation 1: Conceptual Architecture of Kodi (YouTube)
 									</a>
 								</ul>
@@ -110,20 +108,6 @@
 					</div>
 				</section>
 
-				<!-- 3 -->
-				<section id="FOUR">
-					<div class="container">
-						<header class="major">
-							<h2>Problems?</h2>
-							<p>Don't worry!</p>
-							<p>
-								<i>If there is anything wrong, please contact us use the email button at the bottom right of the page!</i>
-							</p>
-						</header>
-					</div>
-				</section>
-				</div>
-			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
