--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								</a>
 							</ul>
 							<ul>
-								<a href="">
+								<a href="report/Kobi%20-%20Assignment%201_%20Conceptual%20Architecture.pdf">
 									Report 2: Concrete Architecture of Kodi
 								</a>
 							</ul>
