Updated reference link for A1

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 						<header class="major">
 							<h2>Reports</h2>
 							<ul>
-								<a href="https://github.com/edng5/edng5.github.io/blob/main/report/Kobi%20-%20Assignment%201_%20Conceptual%20Architecture.pdf">
+								<a href="report/Kobi%20-%20Assignment%201_%20Conceptual%20Architecture.pdf">
 									Report 1: Conceptual Architecture of Kodi
 								</a>
 							</ul>
 							<ul>
-								<a href="report/Kobi%20-%20Assignment%201_%20Conceptual%20Architecture.pdf">
+								<a href="">
 									Report 2: Concrete Architecture of Kodi
 								</a>
 							</ul>
