--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 								</a>
 							</ul>
 							<ul>
-								<a href="">
+								<a href="report/Kobi%20-%20Assignment%202_%20Concrete%20Architecture.pdf">
 									Report 2: Concrete Architecture of Kodi
 								</a>
 							</ul>
@@ -94,7 +94,7 @@
 									</a>
 								</ul>
 								<ul>
-									<a href="">
+									<a href="https://www.youtube.com/watch?v=kp7c4OSpnO8&t=307s">
 										Presentation 2: Concrete Architecture of Kodi (YouTube)
 									</a>
 								</ul>
