--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								</a>
 							</ul>
 							<ul>
-								<a href="">
+								<a href="report/Kobi%20-%20Assignment%203_%20Enhancements.pdf">
 									Report 3: Enhancement Proposal
 								</a>
 							</ul>
@@ -99,7 +99,7 @@
 									</a>
 								</ul>
 							<ul>
-								<a href="">
+								<a href="https://www.youtube.com/watch?v=8SM_HbYrxHA&feature=youtu.be">
 									Presentation 3: Enhancement Proposal for Kodi (YouTube)
 								</a>
 							</ul>
